<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="5.0dip"
    android:paddingTop="5.0dip" >

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="10.0dip"
        android:text="@string/offlinemap_layout_down_city" />

    <TextView
        android:id="@+id/update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="10.0dip"
        android:layout_toRightOf="@id/title"
        android:text="@string/update_element_newest"
        android:textColor="#ffff0000" />

    <TextView
        android:id="@+id/ratio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="10.0dip"
        android:layout_toRightOf="@id/update"
        android:text="100%" />

    <Button
        android:id="@+id/remove"
        android:layout_width="wrap_content"
        android:layout_height="35.0dip"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="10.0dip"
        android:layout_weight="1.0"
        android:textSize="16sp"
        android:text="@string/offlinemap_layout_delete" />

    <Button
        android:id="@+id/start"
        android:layout_width="wrap_content"
        android:layout_height="35.0dip"
        android:layout_alignBaseline="@id/remove"
        android:layout_alignBottom="@id/remove"
        android:layout_marginRight="10.0dip"
        android:layout_toLeftOf="@id/remove"
        android:layout_weight="1.0"
        android:textSize="16sp"
        android:text="@string/offlinemap_layout_start" />

</RelativeLayout>