<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:clickable="true"
    android:orientation="vertical"
    android:padding="20.0dip" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/bg_bombbox"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/DialogPasswordTitle"
            style="@style/text_18_ffffff"
            android:layout_width="fill_parent"
            android:layout_height="40.0dip"
            android:gravity="center"
            android:text="@string/dialog_password_title"
            android:visibility="visible" />


         <RelativeLayout
            android:id="@+id/content5"
            android:layout_width="fill_parent"
            android:layout_height="50dip"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/OriginalPasswordView"
                style="@style/text_16_666666"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_password_original"
                android:layout_centerVertical="true" />

            <EditText
                android:id="@+id/OriginalPasswordOneEdit"
                android:layout_width="180dip"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginTop="5dip"
                android:gravity="left"
                android:digits="0123456789abcdefghijklmnopqrstuvwxyz"
                android:inputType="textPassword">
                <requestFocus />
            </EditText>
        </RelativeLayout>
        
        <RelativeLayout
            android:id="@+id/content4"
            android:layout_width="fill_parent"
            android:layout_height="50dip"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/PasswordOneView"
                style="@style/text_16_666666"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_password_titleone"
                android:layout_centerVertical="true" />

            <EditText
                android:id="@+id/PasswordOneEdit"
                android:layout_width="180dip"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginTop="5dip"
                android:gravity="left"
                android:hint="@string/password_dialog_edittext"
                android:digits="0123456789abcdefghijklmnopqrstuvwxyz"
                android:inputType="textPassword">
                <requestFocus />
            </EditText>
        </RelativeLayout>
        
        <RelativeLayout
            android:id="@+id/content3"
            android:layout_width="fill_parent"
            android:layout_height="50dip"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/PasswordTwoView"
                style="@style/text_16_666666"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_password_titletwo"
                android:layout_centerVertical="true" />

            <EditText
                android:id="@+id/PasswordTwoEdit"
                android:layout_width="180dip"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginTop="5dip"
                android:gravity="left"
                android:hint="@string/password_dialog_edittext"
                android:digits="0123456789abcdefghijklmnopqrstuvwxyz"
                android:inputType="textPassword">
                <requestFocus />
            </EditText>
        </RelativeLayout>
        
        <View
            android:layout_width="fill_parent"
            android:layout_height="1.0px"
            android:background="#ffd0d0d0" />
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="60.0dip"
            android:layout_gravity="bottom"
            android:background="@drawable/dialog_bottom_bg"
            android:gravity="center"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/PasswordOkButton"
                style="@style/text_15_ffffff_sdw"
                android:layout_width="114.0dip"
                android:layout_height="40.0dip"
                android:background="@drawable/btn_ok_selector"
                android:gravity="center"
                android:text="@string/dialog_phone_ok" />

            <Button
                android:id="@+id/PasswordCancelButton"
                style="@style/text_15_666666_sdw"
                android:layout_width="114.0dip"
                android:layout_height="40.0dip"
                android:layout_marginLeft="20.0dip"
                android:background="@drawable/btn_cancel_selector"
                android:gravity="center"
                android:text="@string/dialog_phone_cancel" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>