<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:wheel="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/ic_main_bg"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <RelativeLayout
            android:id="@+id/relativeLayout2"
            android:layout_width="220.0dip"
            android:layout_height="220.0dip"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="-20.0dip" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="250.0dip"
                android:layout_height="77.0dip"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_login_logo" />
        </RelativeLayout>
        
        <EditText
                android:id="@+id/UserNameEdit"
                android:layout_width="240.0dip"
                android:layout_height="wrap_content"
                android:layout_below="@id/relativeLayout2"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="-65.0dip"
                android:background="@drawable/ic_login_user"
                android:ems="10"
                android:hint="@string/login_username"
                android:paddingLeft="40.0dip" />
			
        	
            <EditText
                android:id="@+id/PassWordEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/UserNameEdit"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5.0dip"
                android:background="@drawable/ic_login_pass"
                android:ems="10"
                android:hint="@string/login_password"
                android:inputType="textPassword"
                android:digits="0123456789abcdefghijklmnopqrstuvwxyz"
                android:paddingLeft="40.0dip" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="50.0dip"
                android:layout_height="50.0dip"
                android:layout_above="@id/PassWordEdit"
                android:layout_alignTop="@+id/UserNameEdit"
                android:layout_centerHorizontal="true"
                android:layout_toRightOf="@id/UserNameEdit"
                android:src="@drawable/zxing" />
            
            <CheckBox
                android:id="@+id/RadioRememberBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/PassWordEdit"
                android:layout_below="@id/PassWordEdit"
                android:checked="false"
                android:text="@string/login_save_password"
                android:textSize="12sp" />

            <CheckBox
                android:id="@+id/RadioLoginBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/PassWordEdit"
                android:layout_toRightOf="@id/RadioRememberBtn"
                android:checked="false"
                android:text="@string/login_auto_login"
                android:textSize="12sp" />

            <Button
                android:id="@+id/LoginBtn"
                android:layout_width="240.0dip"
                android:layout_height="wrap_content"
                android:layout_below="@id/RadioLoginBtn"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8.0dip"
                android:background="@drawable/login_button"
                android:text="@string/login_button_string" />
       	<RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <TextView
            android:id="@+id/register_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/login_button_register"
            android:textColor="#FFFF00"/>
    	</RelativeLayout>
    </RelativeLayout>

    

</LinearLayout>